WIP fix align blogs

--- a/assets/component-article-card.css
+++ b/assets/component-article-card.css
@@ -6,7 +6,6 @@
 
 .article {
   display: flex;
-  align-items: center;
 }
 
 .article.grid__item {
