--- a/assets/section-featured-blog.css
+++ b/assets/section-featured-blog.css
@@ -26,10 +26,6 @@
   scroll-snap-align: center;
 }
 
-.article {
-  align-items: start;
-}
-
 @media screen and (max-width: 749px) {
   .blog__post.article {
     width: 80%;
